# cuddy_supervisor

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  diesel.toml
.github/workflows/: check.yml
migrations/2024-08-30-091649_create_jobs/: up.sql
migrations/2024-08-30-164742_add_worker_id_to_jobs/: down.sql  up.sql
src/: database.rs  jobs.rs  logger.rs  main.rs  models.rs  schema.rs
