[package]
name = "cuddy_supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features  =["macros"] } 
chrono = "0.4.38"
colored = "2.1.0"
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = {version = "1.2", features = ["v4"]}

